WinTerm: Update config

--- a/apps/winterm/.config/winterm/settings.json
+++ b/apps/winterm/.config/winterm/settings.json
@@ -114,27 +114,27 @@
     // "command": "closeTab" is unbound by default.
     //   The closeTab command closes a tab without confirmation, even if it has multiple panes.
     { "command": "newTab", "keys": "alt+t" },
-    { "command": { "action": "newTab", "index": 0 }, "keys": "alt+shift+1" },
-    { "command": { "action": "newTab", "index": 1 }, "keys": "alt+shift+2" },
-    { "command": { "action": "newTab", "index": 2 }, "keys": "alt+shift+3" },
-    { "command": { "action": "newTab", "index": 3 }, "keys": "alt+shift+4" },
-    { "command": { "action": "newTab", "index": 4 }, "keys": "alt+shift+5" },
-    { "command": { "action": "newTab", "index": 5 }, "keys": "alt+shift+6" },
-    { "command": { "action": "newTab", "index": 6 }, "keys": "alt+shift+7" },
-    { "command": { "action": "newTab", "index": 7 }, "keys": "alt+shift+8" },
-    { "command": { "action": "newTab", "index": 8 }, "keys": "alt+shift+9" },
+    { "command": { "action": "newTab", "index": 0 }, "keys": "ctrl+shift+1" },
+    { "command": { "action": "newTab", "index": 1 }, "keys": "ctrl+shift+2" },
+    { "command": { "action": "newTab", "index": 2 }, "keys": "ctrl+shift+3" },
+    { "command": { "action": "newTab", "index": 3 }, "keys": "ctrl+shift+4" },
+    { "command": { "action": "newTab", "index": 4 }, "keys": "ctrl+shift+5" },
+    { "command": { "action": "newTab", "index": 5 }, "keys": "ctrl+shift+6" },
+    { "command": { "action": "newTab", "index": 6 }, "keys": "ctrl+shift+7" },
+    { "command": { "action": "newTab", "index": 7 }, "keys": "ctrl+shift+8" },
+    { "command": { "action": "newTab", "index": 8 }, "keys": "ctrl+shift+9" },
     { "command": "duplicateTab", "keys": "alt+shift+d" },
     { "command": "nextTab", "keys": "ctrl+tab" },
     { "command": "prevTab", "keys": "ctrl+shift+tab" },
-    { "command": { "action": "switchToTab", "index": 0 }, "keys": "alt+1" },
-    { "command": { "action": "switchToTab", "index": 1 }, "keys": "alt+2" },
-    { "command": { "action": "switchToTab", "index": 2 }, "keys": "alt+3" },
-    { "command": { "action": "switchToTab", "index": 3 }, "keys": "alt+4" },
-    { "command": { "action": "switchToTab", "index": 4 }, "keys": "alt+5" },
-    { "command": { "action": "switchToTab", "index": 5 }, "keys": "alt+6" },
-    { "command": { "action": "switchToTab", "index": 6 }, "keys": "alt+7" },
-    { "command": { "action": "switchToTab", "index": 7 }, "keys": "alt+8" },
-    { "command": { "action": "switchToTab", "index": 8 }, "keys": "alt+9" },
+    { "command": { "action": "switchToTab", "index": 0 }, "keys": "alt+shift+1" },
+    { "command": { "action": "switchToTab", "index": 1 }, "keys": "alt+shift+2" },
+    { "command": { "action": "switchToTab", "index": 2 }, "keys": "alt+shift+3" },
+    { "command": { "action": "switchToTab", "index": 3 }, "keys": "alt+shift+4" },
+    { "command": { "action": "switchToTab", "index": 4 }, "keys": "alt+shift+5" },
+    { "command": { "action": "switchToTab", "index": 5 }, "keys": "alt+shift+6" },
+    { "command": { "action": "switchToTab", "index": 6 }, "keys": "alt+shift+7" },
+    { "command": { "action": "switchToTab", "index": 7 }, "keys": "alt+shift+8" },
+    { "command": { "action": "switchToTab", "index": 8 }, "keys": "alt+shift+9" },
 
     // Pane Management
     { "command": "closePane", "keys": "alt+q" },
