Tmux: update leading key

--- a/apps/tmux/.config/tmux/tmuxrc.conf
+++ b/apps/tmux/.config/tmux/tmuxrc.conf
@@ -1,7 +1,7 @@
 # Keymaps
-set-option -g escape-time 50
-set-option -g prefix M-`
 unbind-key C-b
+set-option -g escape-time 50
+set-option -g prefix C-s
 # Panes
 bind-key -r h select-pane -L
 bind-key -r l select-pane -R
@@ -64,4 +64,3 @@ set-option -g window-status-current-style fg=white,bg=black
 # Debug
 bind F5 source ~/.tmux.conf\; display "tmux config sourced"
 bind F6 neww -n "tmux-config" "\${EDITOR:-vim} ~/.tmux.conf"
-
