Vim: Add a new way to load modules

--- a/apps/vim/.config/vim/coc-settings.json
+++ b/apps/vim/.config/vim/coc-settings.json
@@ -1,15 +1,5 @@
 {
     "$schema": "https://github.com/neoclide/coc.nvim/blob/master/data/schema.json",
-    "languageserver": {
-        "ccls": {
-            "command": "ccls",
-            "filetypes": ["c", "cpp", "objc", "objcpp"],
-            "rootPatterns": [".ccls", "compile_commands.json", ".git/", ".hg/"],
-            "initializationOptions": {
-                "cache": {
-                    "directory": "/tmp/ccls"
-                }
-            }
-        }
-    }
+    "clangd.path": "/home/dev/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd",
+    "python.jediEnabled": false
 }
