--- a/apps/winterm/.config/winterm/settings.json
+++ b/apps/winterm/.config/winterm/settings.json
@@ -44,15 +44,15 @@
     },
     "list": [
       {
-        "guid": "{6aa2b33e-bc10-4c5b-9088-579105431da3}",
-        "name": "PS Acrylic",
-        "commandline": "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe -NoLogo -NoExit",
-        "useAcrylic": true
-      },
-      {
         "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
         "name": "PowerShell",
         "commandline": "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe -NoLogo -NoExit"
+      },
+      {
+        "guid": "{6aa2b33e-bc10-4c5b-9088-579105431da3}",
+        "name": "PowerShell Acrylic",
+        "commandline": "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe -NoLogo -NoExit",
+        "useAcrylic": true
       },
       {
         "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
@@ -66,10 +66,10 @@
         "source": "Windows.Terminal.Azure"
       },
       {
-          "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-          "hidden": false,
-          "name": "Pwsh",
-          "source": "Windows.Terminal.PowershellCore"
+        "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+        "hidden": false,
+        "name": "Pwsh",
+        "source": "Windows.Terminal.PowershellCore"
       }
     ]
   },
@@ -138,8 +138,8 @@
 
     // Pane Management
     { "command": "closePane", "keys": "alt+q" },
-    { "command": { "action": "splitPane", "split": "horizontal" }, "keys": "alt+shift+\\" },
-    { "command": { "action": "splitPane", "split": "vertical" }, "keys": "alt+\\" },
+    { "command": { "action": "splitPane", "split": "horizontal", "splitMode": "duplicate" }, "keys": "alt+shift+\\" },
+    { "command": { "action": "splitPane", "split": "vertical", "splitMode": "duplicate" }, "keys": "alt+\\" },
     { "command": { "action": "resizePane", "direction": "down" }, "keys": "alt+shift+-" },
     { "command": { "action": "resizePane", "direction": "left" }, "keys": "alt+-" },
     { "command": { "action": "resizePane", "direction": "right" }, "keys": "alt+=" },
