--- a/apps/vim/.config/vim/coc-settings.json
+++ b/apps/vim/.config/vim/coc-settings.json
@@ -3,5 +3,21 @@
     "clangd.path": "/home/dev/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd",
     "python.jediEnabled": false,
     "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "languageserver": {
+        "ccls": {
+            "command": "ccls",
+            "filetypes": ["c", "cpp", "h", "hpp"],
+            "rootPatterns": [".ccls-root", "compile_commands.json"],
+            "initializationOptions": {
+                "cache": {
+                    "directory": ".ccls-cache"
+                },
+                "client": {
+                    "snippetSupport": true
+                }
+            },
+	        "enable": false
+        }
+    }
 }
