Totalcmd: Update keymaps to Vi style

--- a/apps/totalcmd/.config/totalcmd/WINCMD.INI
+++ b/apps/totalcmd/.config/totalcmd/WINCMD.INI
@@ -1,7 +1,7 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=2553
+firstmnu=1273
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
@@ -9,7 +9,7 @@ PanelsVertical=0
 test=43
 onlyonce=1
 TrayIcon=0
-UseRightButton=1
+UseRightButton=0
 Savepath=1
 Savepanels=1
 MarkDirectories=1
@@ -89,6 +89,7 @@ CrcForceUtf8=0
 CrcForwardSlashes=0
 SoundDelay=-10
 DarkMode=0
+CrcAppendExt=1
 [Buttonbar]
 Buttonbar=%APPDATA%\GHISLER\toolbars\default.bar
 DefaultLib=wcmicon2
@@ -149,11 +150,12 @@ ButtonBar=0
 ButtonBarVertical=1
 [ViewModeSwitch]
 [SearchText]
-0=716
-1=FUCK
-2=logwn
-3=screen
-4=visibility
+0=Note: Google Test filter
+1=716
+2=FUCK
+3=logwn
+4=screen
+5=visibility
 [AllResolutions]
 FontSize=9
 FontName=Consolas
@@ -162,8 +164,8 @@ FontNameWindow=Consolas
 FontWeight=400
 FontWeightWindow=700
 FontNameDialog=Microsoft Sans Serif
-CmdSelX=719
-CmdSelY=298
+CmdSelX=468
+CmdSelY=210
 CmdSelDX=919
 CmdSelDY=588
 CmdSelMax=0
@@ -275,41 +277,44 @@ cmd4=cd %USERPROFILE%\Documents\
 [HintsCustomField]
 [Shortcuts]
 S+OEM_US;:=cm_FocusCmdLine
-CS+D=cm_DirectoryHistory
+F2=cm_RenameSingleFile
+V=cm_Reverse
+C=cm_RenameOnly
+S+C=cm_MultiRenameFiles
+D=cm_RenMov
+S+X=cm_PackFiles
+X=cm_UnpackFiles
+Y=cm_Copy
+P=cm_CopyNetNamesToClip
+/=cm_ShowQuickSearch
+A=cm_ContextMenu
+E=cm_SrcQuickview
 LEFT=cm_GoToParent
 RIGHT=cm_GoToDir
-SPACE=cm_Reverse
-F2=cm_RenameSingleFile
+H=cm_GoToParent
+L=cm_GoToDir
+S+E=cm_SeparateQuickView
+O=cm_Edit
+S+O=cm_EditNewFile
+S+P=cm_CopyNamesToClip
+T=cm_OpenNewTab
+S+T=cm_OpenDirInNewTabOther
+Q=cm_CloseCurrentTab
+G=cm_DirectoryHotlist
+S+G=cm_DirectoryHistory
+S+V=cm_ClearAll
+R=cm_RereadSource
 F1=cm_RereadSource
-A+H=cm_SwitchToPreviousTab
-A+L=cm_SwitchToNextTab
-AS+T=cm_OpenDirInNewTabOther
-A+T=cm_OpenNewTab
-A+J=cm_FocusTrg
-A+Q=cm_CloseCurrentTab
-AS+Q=cm_CloseAllTabs
-A+LEFT=cm_SwitchToPreviousTab
-A+RIGHT=cm_SwitchToNextTab
-A+UP=cm_FocusTrg
-A+DOWN=cm_FocusTrg
-A+P=cm_CopyNetNamesToClip
-AS+P=cm_CopyNamesToClip
-A+K=cm_FocusTrg
-A+X=cm_UnpackFiles
-A+Z=cm_PackFiles
-CS+A=cm_SrcViewModeList
-A+F=cm_SrcQuickview
-A+A=cm_SwitchToPreviousTab
-A+D=cm_SwitchToNextTab
-A+S=cm_FocusTrg
-A+W=cm_MatchSrc
+S+I=cm_MkDir
+W=cm_SwitchToNextTab
+S+W=cm_SwitchToPreviousTab
 [Associations]
 [Confirmation]
 deleteDirs=1
 OverwriteFiles=1
 OverwriteReadonly=1
 OverwriteHidSys=1
-MouseActions=0
+MouseActions=1
 ; Redirect private data in a separate file
 [left]
 RedirectSection=%APPDATA%\GHISLER\data\history.ini
