Totalcmd: Update config

--- a/apps/totalcmd/.config/totalcmd/WINCMD.INI
+++ b/apps/totalcmd/.config/totalcmd/WINCMD.INI
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=1273
+firstmnu=1529
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=43
+test=206
 onlyonce=1
 TrayIcon=0
 UseRightButton=0
@@ -288,12 +288,11 @@ Y=cm_Copy
 P=cm_CopyNetNamesToClip
 /=cm_ShowQuickSearch
 A=cm_ContextMenu
-E=cm_SrcQuickview
+E=cm_List
 LEFT=cm_GoToParent
 RIGHT=cm_GoToDir
 H=cm_GoToParent
 L=cm_GoToDir
-S+E=cm_SeparateQuickView
 O=cm_Edit
 S+O=cm_EditNewFile
 S+P=cm_CopyNamesToClip
@@ -306,8 +305,9 @@ S+V=cm_ClearAll
 R=cm_RereadSource
 F1=cm_RereadSource
 S+I=cm_MkDir
-W=cm_SwitchToNextTab
-S+W=cm_SwitchToPreviousTab
+W=cm_SrcQuickview
+OEM_US[{=cm_SwitchToPreviousTab
+OEM_US]}=cm_SwitchToNextTab
 [Associations]
 [Confirmation]
 deleteDirs=1
