Totalcmd: Update keymaps

--- a/apps/totalcmd/.config/totalcmd/WINCMD.INI
+++ b/apps/totalcmd/.config/totalcmd/WINCMD.INI
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=1529
+firstmnu=1337
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=206
+test=74
 onlyonce=1
 TrayIcon=0
 UseRightButton=0
@@ -294,7 +294,7 @@ RIGHT=cm_GoToDir
 H=cm_GoToParent
 L=cm_GoToDir
 O=cm_Edit
-S+O=cm_EditNewFile
+S+O=cm_Return
 S+P=cm_CopyNamesToClip
 T=cm_OpenNewTab
 S+T=cm_OpenDirInNewTabOther
@@ -308,6 +308,9 @@ S+I=cm_MkDir
 W=cm_SrcQuickview
 OEM_US[{=cm_SwitchToPreviousTab
 OEM_US]}=cm_SwitchToNextTab
+J=cm_GotoNext
+K=cm_GotoPrev
+I=cm_EditNewFile
 [Associations]
 [Confirmation]
 deleteDirs=1
