Totalcmd: Update keymaps

--- a/apps/totalcmd/.config/totalcmd/WINCMD.INI
+++ b/apps/totalcmd/.config/totalcmd/WINCMD.INI
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=1337
+firstmnu=2750
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=74
+test=115
 onlyonce=1
 TrayIcon=0
 UseRightButton=0
@@ -311,6 +311,7 @@ OEM_US]}=cm_SwitchToNextTab
 J=cm_GotoNext
 K=cm_GotoPrev
 I=cm_EditNewFile
+S+D=cm_Delete
 [Associations]
 [Confirmation]
 deleteDirs=1
