Totalcmd: Update Keybindings

--- a/apps/totalcmd/.config/totalcmd/WINCMD.INI
+++ b/apps/totalcmd/.config/totalcmd/WINCMD.INI
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=2750
+firstmnu=2622
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=115
+test=178
 onlyonce=1
 TrayIcon=0
 UseRightButton=0
@@ -312,6 +312,7 @@ J=cm_GotoNext
 K=cm_GotoPrev
 I=cm_EditNewFile
 S+D=cm_Delete
+F=cm_ShowQuickSearch
 [Associations]
 [Confirmation]
 deleteDirs=1
