Totalcmd: Update keybindings

--- a/apps/totalcmd/.config/totalcmd/WINCMD.INI
+++ b/apps/totalcmd/.config/totalcmd/WINCMD.INI
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=2622
+firstmnu=2174
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=178
+test=9
 onlyonce=1
 TrayIcon=0
 UseRightButton=0
@@ -277,17 +277,15 @@ cmd4=cd %USERPROFILE%\Documents\
 [HintsCustomField]
 [Shortcuts]
 S+OEM_US;:=cm_FocusCmdLine
-F2=cm_RenameSingleFile
+F2=cm_RenameOnly
 V=cm_Reverse
-C=cm_RenameOnly
-S+C=cm_MultiRenameFiles
 D=cm_RenMov
 S+X=cm_PackFiles
 X=cm_UnpackFiles
 Y=cm_Copy
 P=cm_CopyNetNamesToClip
 /=cm_ShowQuickSearch
-A=cm_ContextMenu
+A=cm_EditNewFile
 E=cm_List
 LEFT=cm_GoToParent
 RIGHT=cm_GoToDir
@@ -304,15 +302,15 @@ S+G=cm_DirectoryHistory
 S+V=cm_ClearAll
 R=cm_RereadSource
 F1=cm_RereadSource
-S+I=cm_MkDir
 W=cm_SrcQuickview
 OEM_US[{=cm_SwitchToPreviousTab
 OEM_US]}=cm_SwitchToNextTab
 J=cm_GotoNext
 K=cm_GotoPrev
-I=cm_EditNewFile
 S+D=cm_Delete
 F=cm_ShowQuickSearch
+S+A=cm_MkDir
+B=cm_ContextMenu
 [Associations]
 [Confirmation]
 deleteDirs=1
