Winterm, Totalcmd: Update config

--- a/apps/totalcmd/.config/totalcmd/WINCMD.INI
+++ b/apps/totalcmd/.config/totalcmd/WINCMD.INI
@@ -1,7 +1,7 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=2174
+firstmnu=3582
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
@@ -150,12 +150,13 @@ ButtonBar=0
 ButtonBarVertical=1
 [ViewModeSwitch]
 [SearchText]
-0=Note: Google Test filter
-1=716
-2=FUCK
-3=logwn
-4=screen
-5=visibility
+0=cellular
+1=Note: Google Test filter
+2=716
+3=FUCK
+4=logwn
+5=screen
+6=visibility
 [AllResolutions]
 FontSize=9
 FontName=Consolas
@@ -221,6 +222,7 @@ x=960
 y=0
 dx=960
 dy=1040
+Wrap=1
 [Packer]
 InternalZip=1
 InternalUnzip=1
@@ -270,10 +272,10 @@ menu1=Home
 cmd1=cd %USERPROFILE%\
 menu2=Desktop
 cmd2=cd %USERPROFILE%\Desktop\
-menu3=Downloads
-cmd3=cd %USERPROFILE%\Downloads\
-menu4=Documents
-cmd4=cd %USERPROFILE%\Documents\
+menu3=Documents
+cmd3=cd %USERPROFILE%\Documents\
+menu4=Downloads
+cmd4=cd C:\Users\fdeng5\Downloads
 [HintsCustomField]
 [Shortcuts]
 S+OEM_US;:=cm_FocusCmdLine
