Vim, Totalcmd: Update config

--- a/apps/totalcmd/.config/totalcmd/WINCMD.INI
+++ b/apps/totalcmd/.config/totalcmd/WINCMD.INI
@@ -1,7 +1,7 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=3582
+firstmnu=702
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
@@ -150,13 +150,7 @@ ButtonBar=0
 ButtonBarVertical=1
 [ViewModeSwitch]
 [SearchText]
-0=cellular
-1=Note: Google Test filter
-2=716
-3=FUCK
-4=logwn
-5=screen
-6=visibility
+RedirectSection=%APPDATA%\GHISLER\data\history.ini
 [AllResolutions]
 FontSize=9
 FontName=Consolas
@@ -195,10 +189,10 @@ TreeDlgDY=448
 TreeDlgMax=0
 RenameX=622
 RenameY=324
-RenameDX=720
-RenameDY=480
+RenameDX=1132
+RenameDY=620
 RenameMax=0
-RenameTabs=169,276,476,536,656
+RenameTabs=169,276,532,592,712
 MenuChangeX=507
 MenuChangeY=256
 MenuChangeDX=800
@@ -222,7 +216,7 @@ x=960
 y=0
 dx=960
 dy=1040
-Wrap=1
+Wrap=0
 [Packer]
 InternalZip=1
 InternalUnzip=1
