Vim: Update config

--- a/apps/vim/.config/vim/coc-settings.json
+++ b/apps/vim/.config/vim/coc-settings.json
@@ -4,6 +4,7 @@
     "python.jediEnabled": false,
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
+    "powershell.integratedConsole.showOnStartup": false,
     "languageserver": {
         "ccls": {
             "command": "ccls",
