Vscode: Update config

--- a/apps/vscode/User/settings.json
+++ b/apps/vscode/User/settings.json
@@ -48,4 +48,6 @@
     "telemetry.enableTelemetry": false,
     "editor.fontLigatures": true,
     "workbench.sideBar.location": "left",
+    "explorer.confirmDragAndDrop": false,
+    "powershell.integratedConsole.showOnStartup": false,
 }
