Vim: Add markdown settings in coc

--- a/conf_apps/vim/coc-settings.json
+++ b/conf_apps/vim/coc-settings.json
@@ -5,6 +5,9 @@
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "powershell.integratedConsole.showOnStartup": false,
+    "markdownlint.config": {
+        "line-length": false
+    },
     "languageserver": {
         "ccls": {
             "command": "ccls",
