Tmux: Update config

--- a/conf_apps/tmux/tmuxrc.conf
+++ b/conf_apps/tmux/tmuxrc.conf
@@ -1,7 +1,7 @@
 # Keymaps
 unbind-key C-b
 set-option -g escape-time 50
-set-option -g prefix C-s
+set-option -g prefix C-Space
 # Panes
 bind-key -r h select-pane -L
 bind-key -r l select-pane -R
@@ -60,6 +60,8 @@ set-option -g window-status-separator " "
 set-option -g window-status-style default
 set-option -g window-status-current-style fg=white,bg=black
 
+# Misc
+#set -g default-shell /bin/sh
 
 # Debug
 bind F5 source ~/.tmux.conf\; display "tmux config sourced"
