Tmux: Update config

--- a/conf_apps/tmux/tmuxrc.conf
+++ b/conf_apps/tmux/tmuxrc.conf
@@ -1,7 +1,11 @@
 # Keymaps
 unbind-key C-b
 set-option -g escape-time 50
-set-option -g prefix C-Space
+# Prefix: CTRL+`
+#set-option -g prefix C-@
+# Prefix: `
+set-option -g prefix `
+
 # Panes
 bind-key -r h select-pane -L
 bind-key -r l select-pane -R
@@ -17,6 +21,7 @@ bind-key -r } swap-pane -D
 bind-key \ split-window -h -c "#{pane_current_path}"
 bind-key | split-window -v -c "#{pane_current_path}"
 bind-key q kill-pane
+
 # Windows (tabs)
 bind-key m command-prompt -I "#W" "rename-window '%%'"
 bind-key t new-window
@@ -25,6 +30,7 @@ bind-key b choose-tree
 bind-key -r , select-window -p
 bind-key -r . select-window -n
 bind-key x kill-window
+
 # Sessions
 bind-key M command-prompt -I "#S" "rename-session '%%'"
 bind-key X kill-session -a
@@ -37,6 +43,7 @@ set-option -g default-terminal "tmux-256color"
 set-option -g allow-rename off
 set-option -g automatic-rename off
 set-option -g xterm-keys on
+
 # Mouse support
 set-option -g mouse on
 
