Tmux: Update config baselining the lastest version

--- a/conf_apps/tmux/tmuxrc.conf
+++ b/conf_apps/tmux/tmuxrc.conf
@@ -1,10 +1,9 @@
 # Keymaps
 unbind-key C-b
-set-option -g escape-time 50
+set-option -s escape-time 50
 # Prefix: CTRL+`
-#set-option -g prefix C-@
-# Prefix: `
 set-option -g prefix `
+bind-key ` send-prefix
 
 # Panes
 bind-key -r h select-pane -L
@@ -16,9 +15,9 @@ bind-key -r = resize-pane -R
 bind-key -r _ resize-pane -D
 bind-key -r + resize-pane -U
 bind-key -r w resize-pane -Z
-bind-key -r { swap-pane -U
-bind-key -r } swap-pane -D
-bind-key \ split-window -h -c "#{pane_current_path}"
+bind-key -r \{ swap-pane -U
+bind-key -r \} swap-pane -D
+bind-key \\ split-window -h -c "#{pane_current_path}"
 bind-key | split-window -v -c "#{pane_current_path}"
 bind-key q kill-pane
 
