Swap shortcut to split window in different tools

--- a/conf_apps/tmux/tmuxrc.conf
+++ b/conf_apps/tmux/tmuxrc.conf
@@ -17,8 +17,8 @@ bind-key -r + resize-pane -U
 bind-key -r w resize-pane -Z
 bind-key -r \{ swap-pane -U
 bind-key -r \} swap-pane -D
-bind-key \\ split-window -h -c "#{pane_current_path}"
-bind-key | split-window -v -c "#{pane_current_path}"
+bind-key | split-window -h -c "#{pane_current_path}"
+bind-key \\ split-window -v -c "#{pane_current_path}"
 bind-key q kill-pane
 
 # Windows (tabs)
