--- a/conf_apps/winterm/settings.json
+++ b/conf_apps/winterm/settings.json
@@ -219,8 +219,8 @@
 
     // Pane Management
     { "command": "closePane", "keys": "alt+q" },
-    { "command": { "action": "splitPane", "split": "horizontal", "splitMode": "duplicate" }, "keys": "alt+shift+\\" },
-    { "command": { "action": "splitPane", "split": "vertical", "splitMode": "duplicate" }, "keys": "alt+\\" },
+    { "command": { "action": "splitPane", "split": "horizontal", "splitMode": "duplicate" }, "keys": "alt+\\" },
+    { "command": { "action": "splitPane", "split": "vertical", "splitMode": "duplicate" }, "keys": "alt+shift+\\" },
     { "command": { "action": "resizePane", "direction": "down" }, "keys": "alt+shift+-" },
     { "command": { "action": "resizePane", "direction": "left" }, "keys": "alt+-" },
     { "command": { "action": "resizePane", "direction": "right" }, "keys": "alt+=" },
