Totalcmd: Update config

--- a/conf_apps/totalcmd/WINCMD.INI
+++ b/conf_apps/totalcmd/WINCMD.INI
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=446
+firstmnu=2111
 FirstTime=0
 FirstTimeIconLib=0
-SeparateTree=0
+SeparateTree=1
 PanelsVertical=0
-test=9
+test=211
 onlyonce=1
 TrayIcon=0
 UseRightButton=0
@@ -25,14 +25,14 @@ CountMarked=1
 CopyComments=14
 CommentPreferredFormat=4
 IconClickSelection=1
-Aligned extension=1
+Aligned extension=0
 FirstTimeUnpack=0
 FirstTimeZIP=0
 ShowHiddenSystem=1
 UseLongNames=1
 Small83Names=0
 OldStyleTree=0
-autotreechange=0
+autotreechange=1
 DirBrackets=0
 ShowParentDirInRoot=1
 SortDirsByName=0
@@ -66,7 +66,7 @@ Editor=notepad.exe
 Viewertype=1
 SyncFlags=0
 SyncButtons=63
-DirTabOptions=1017
+DirTabOptions=2043
 DirTabLimit=16
 ShowCentury=1
 SizeStyle=9
@@ -90,6 +90,7 @@ CrcForwardSlashes=0
 SoundDelay=-10
 DarkMode=0
 CrcAppendExt=1
+AutoReUpload=2
 [Buttonbar]
 Buttonbar=%APPDATA%\GHISLER\toolbars\default.bar
 DefaultLib=wcmicon2
@@ -124,18 +125,18 @@ IconDll_default.bar=TCNewLib1
 IconDll_vertical.bar=TCNewLib1
 IconDll_toolbar_default.bar=TCNewLib1
 [Tabstops]
-0=420
-1=435
-3=510
-4=360
-6=1106
+0=352
+1=367
+3=442
+4=-1
+6=969
 5=100
 AdjustWidth=1
 [Layout]
 DriveBar1=0
 DriveBar2=1
 DriveBarFlat=1
-InterfaceFlat=1
+InterfaceFlat=0
 DriveCombo=1
 DirectoryTabs=1
 XPthemeBg=0
@@ -146,8 +147,8 @@ CmdLine=0
 KeyButtons=0
 HistoryHotlistButtons=1
 BreadCrumbBar=1
-ButtonBar=0
-ButtonBarVertical=1
+ButtonBar=1
+ButtonBarVertical=0
 [ViewModeSwitch]
 [SearchText]
 RedirectSection=%APPDATA%\GHISLER\data\history.ini
@@ -171,7 +172,7 @@ CustColumnY=321
 CustColumnDX=657
 CustColumnDY=400
 CustColumnMax=0
-Tabstops=420,435,510,360,1106,100
+Tabstops=352,367,442,-1,969,100
 ConnectX=662
 ConnectY=260
 ConnectDX=485
@@ -188,7 +189,7 @@ TreeDlgDX=435
 TreeDlgDY=448
 TreeDlgMax=0
 RenameX=347
-RenameY=262
+RenameY=261
 RenameDX=1132
 RenameDY=620
 RenameMax=0
@@ -216,7 +217,7 @@ x=960
 y=0
 dx=960
 dy=1040
-Wrap=1
+Wrap=0
 [Packer]
 InternalZip=1
 InternalUnzip=1
