--- a/conf_apps/vscode/User/settings.json
+++ b/conf_apps/vscode/User/settings.json
@@ -1,27 +1,22 @@
 {
-    "git.ignoreMissingGitWarning": true,
+    "window.zoomLevel": 0,
+    "window.title": "${dirty}${activeEditorShort}${separator}${rootName}",
+    "window.restoreWindows": "none",
+
     "workbench.startupEditor": "none",
     "workbench.enableExperiments": false,
-    "update.enableWindowsBackgroundUpdates": false,
-    "extensions.autoUpdate": false,
+    "workbench.tree.renderIndentGuides": "always",
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.editor.openPositioning": "last",
+    "workbench.settings.useSplitJSON": true,
     "workbench.editor.tabSizing": "shrink",
-    "explorer.autoReveal": false,
-    "window.zoomLevel": 0,
     "workbench.colorTheme": "Eva Dark",
     "workbench.iconTheme": "vscode-icons",
-    "csharp.referencesCodeLens.enabled": false,
-    "editor.renderControlCharacters": true,
-    "breadcrumbs.enabled": true,
-    "files.associations": {
-        "*.dvs": "vb"
-    },
-    "window.restoreWindows": "none",
-    "powershell.powerShellExePath": "powershell.exe",
-    "update.mode": "manual",
+    "workbench.sideBar.location": "left",
+
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.detectIndentation": true,
-    "files.eol": "\n",
     "editor.rulers": [
         80,
         120
@@ -29,25 +24,44 @@
     "editor.fontFamily": "Cascadia Code PL, Sarasa Term CL, Consolas, 'Courier New', monospace",
     "editor.cursorStyle": "block",
     "editor.showFoldingControls": "always",
+    "editor.renderControlCharacters": true,
+    "editor.fontLigatures": true,
+
     "files.insertFinalNewline": true,
     "files.simpleDialog.enable": true,
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
-    "workbench.tree.renderIndentGuides": "always",
-    "workbench.editor.highlightModifiedTabs": true,
-    "workbench.editor.openPositioning": "last",
-    "workbench.settings.useSplitJSON": true,
-    "window.title": "${dirty}${activeEditorShort}${separator}${rootName}",
-    "debug.openExplorerOnEnd": true,
+    "files.eol": "\n",
+
+    "explorer.autoReveal": false,
+    "explorer.confirmDragAndDrop": false,
+
+    "terminal.integrated.cursorBlinking": true,
+    "terminal.integrated.enableBell": true,
+    "terminal.integrated.shell.windows": "pwsh.exe",
+
     "extensions.autoCheckUpdates": false,
     "extensions.ignoreRecommendations": true,
     "extensions.showRecommendationsOnlyOnDemand": true,
-    "terminal.integrated.cursorBlinking": true,
-    "terminal.integrated.enableBell": true,
+    "extensions.autoUpdate": false,
+
+    "breadcrumbs.enabled": true,
+    "git.ignoreMissingGitWarning": true,
+    "debug.openExplorerOnEnd": true,
+
+    "update.mode": "manual",
+    "update.enableWindowsBackgroundUpdates": false,
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
-    "editor.fontLigatures": true,
-    "workbench.sideBar.location": "left",
-    "explorer.confirmDragAndDrop": false,
+
+    "csharp.referencesCodeLens.enabled": false,
     "powershell.integratedConsole.showOnStartup": false,
+    "powershell.powerShellAdditionalExePaths": [
+        {
+            "versionName": "pwsh7",
+            "exePath": "pwsh.exe"
+        }
+    ],
+    "powershell.powerShellDefaultVersion": "pwsh7",
+    "powershell.pester.useLegacyCodeLens": false,
 }
