Tmux: Update config

--- a/conf_apps/tmux/tmuxrc.conf
+++ b/conf_apps/tmux/tmuxrc.conf
@@ -34,6 +34,9 @@ bind-key x kill-window
 bind-key M command-prompt -I "#S" "rename-session '%%'"
 bind-key X kill-session -a
 bind-key z detach-client
+bind-key n new-session
+bind-key -r / switch-client -n
+bind-key -r \' switch-client -p
 
 # Quality of life
 set-option -g mode-keys vi
